First release of stress management

--- a/style/components/header/header.scss
+++ b/style/components/header/header.scss
@@ -10,6 +10,7 @@
         color: $header-font-color;
         height: 32px;
         font-size: 24px;
+        border: 0;
     }
 
     input[type="text"].fatex__header__fp__input,
