--- a/system/templates/item/stress/stress-sheet.html
+++ b/system/templates/item/stress/stress-sheet.html
@@ -1,14 +1,12 @@
 {{> "systems/fatex/templates/item/parts/layout/item-header.html" label="FATEx.Item.Stress.Name" item=item}}
 
-{{log "data" data "item" item}}
-
 <div class="fatex__settings">
     <div class="fatex__setting">
         <h2 class="fatex__headline fatex__setting__headline">
             <span>{{localize "FATEx.Item.Stress.Size"}}</span>
         </h2>
 
-        <input type="range" name="data.size" value="{{data.size}}" min="1" max="30"/>
+        <input type="range" name="data.size" value="{{data.size}}" min="1" max="28"/>
     </div>
 
     <div class="fatex__setting">
@@ -16,25 +14,25 @@
             <span>{{localize "FATEx.Item.Stress.Boxes.Label"}}</span>
         </h2>
 
-        <div class="fatex__setting__radio_group">
+        <div class="fatex__setting__radio__group">
             <div
-                    class="fatex__setting__radio{{#ifEquals 0
-                                                            data.labelType}} fatex__setting__radio--active{{/ifEquals}}"
+                    class="fatex__setting__radio{{#ifEquals 0 data.labelType}} fatex__setting__radio--active{{/ifEquals}}"
                     data-value="0"
                     data-name="labelType"
                     data-type="number"
             >
-                A
+                <img class="fatex__setting__radio__image" alt="ascending" src="systems/fatex/assets/ui/stress/label_preview_0.png">
+                <span class="fatex__setting__radio__label">{{localize "FATEx.Item.Stress.Type.Core"}}</span>
             </div>
 
             <div
-                    class="fatex__setting__radio{{#ifEquals 1
-                                                            data.labelType}} fatex__setting__radio--active{{/ifEquals}}"
+                    class="fatex__setting__radio{{#ifEquals 1 data.labelType}} fatex__setting__radio--active{{/ifEquals}}"
                     data-value="1"
                     data-name="labelType"
                     data-type="number"
             >
-                B
+                <img class="fatex__setting__radio__image" alt="condensed" src="systems/fatex/assets/ui/stress/label_preview_1.png">
+                <span class="fatex__setting__radio__label">{{localize "FATEx.Item.Stress.Type.Condensed"}}</span>
             </div>
 
             <div
@@ -43,7 +41,8 @@
                     data-name="labelType"
                     data-type="number"
             >
-                C
+                <img class="fatex__setting__radio__image" alt="custom" src="systems/fatex/assets/ui/stress/label_preview_2.png">
+                <span class="fatex__setting__radio__label">{{localize "FATEx.Item.Stress.Type.Custom"}}</span>
             </div>
         </div>
     </div>
@@ -54,12 +53,9 @@
                 <span>{{localize "FATEx.Item.Stress.Boxes.Custom"}}</span>
             </h2>
 
-
-            <label for="data.customLabel">
-                <span class="fatex__setting__label">{{localize "FATEx.Item.Stress.Boxes.Custom"}}</span>
-                <input type="text" class="fatex__setting__input fatex__setting__input--text" name="data.customLabel"
-                       value="{{data.customLabel}}"/>
+            <label class="fatex__input" for="data.customLabel">
                 <span class="fatex__setting__help">{{localize "FATEx.Item.Stress.Boxes.CustomHelp"}}</span>
+                <input type="text" class="fatex__setting__input fatex__input__input" name="data.customLabel" value="{{data.customLabel}}"/>
             </label>
         </div>
     {{/ifEquals}}
