--- a/system/templates/actor/parts/header.html
+++ b/system/templates/actor/parts/header.html
@@ -1,16 +1,16 @@
 <div class="fatex__header">
     <div class="fatex__header__name">
         <label class="fatex__header__label" for="name">{{localize "FATEx.Sheet.Name"}}</label>
-        <input class="fatex__header__name__input" name="name" type="text" value="{{actor.name}}">
+        <input class="fatex__header__name__input fatex__input" name="name" type="text" value="{{actor.name}}">
     </div>
 
     <div class="fatex__header__fate-points">
         <label class="fatex__header__label fatex__header__label--center" for="name">{{localize "FATEx.Sheet.FatePoints"}}</label>
 
         <div class="fatex__header__fate-points__wrapper">
-            <input class="fatex__header__fp__input fatex__input" name="data.information.fp.current" type="text" value="{{data.information.fp.current}}">
+            <input class="fatex__header__fp__input" name="data.information.fp.current" type="text" value="{{data.information.fp.current}}">
             <span class="fatex__header__fatepoint_divider"> / </span>
-            <input class="fatex__header__refresh__input fatex__input" name="data.information.fp.refresh" type="text" value="{{data.information.fp.refresh}}">
+            <input class="fatex__header__refresh__input" name="data.information.fp.refresh" type="text" value="{{data.information.fp.refresh}}">
         </div>
     </div>
 
