Stress management finished

--- a/style/components.scss
+++ b/style/components.scss
@@ -12,3 +12,5 @@
 @import "components/sheet/item-sheet.scss";
 @import "components/dialog/dialog.scss";
 @import "components/settings/settings.scss";
+@import "components/scrollbar/scrollbar.scss";
+@import "components/helper/helper.scss";
