--- a/style/components/headline/headline.scss
+++ b/style/components/headline/headline.scss
@@ -8,11 +8,17 @@
     text-transform: uppercase;
     font-size: 17px;
 
+    box-shadow: 1px 1px 1px $shadow-color;
+
     &:hover {
         .fatex__headline__actions {
             opacity: 1;
         }
     }
+}
+
+.fatex__headline--center {
+    text-align: center;
 }
 
 .fatex__headline__actions {
@@ -43,6 +49,6 @@
     transition: color 0.3s;
 
     &:hover {
-        color: $color-caution;
+        color: $caution-color;
     }
 }
