--- a/style/settings.scss
+++ b/style/settings.scss
@@ -13,7 +13,8 @@ $primary-color: rgba(47, 53, 66, 1);
 $headline-background: $primary-color;
 $headline-color: rgba(255, 255, 255, 1);
 
-$color-caution: rgba(255, 71, 87, 1);
+$caution-color: rgba(255, 71, 87, 1);
+$shadow-color: rgba(0,0,0,1);
 
 // Fonts
 $primary-font: 'Montserrat', sans-serif;
