--- a/style/components/sheet/item-sheet.scss
+++ b/style/components/sheet/item-sheet.scss
@@ -20,6 +20,10 @@
 
     input[type="text"] {
         background: transparent;
+        border: 0;
+        width: auto;
+        height: auto;
+        padding: 0;
     }
 }
 
