--- a/style/components/sheet/item-sheet.scss
+++ b/style/components/sheet/item-sheet.scss
@@ -25,6 +25,14 @@
         height: auto;
         padding: 0;
     }
+
+    textarea {
+        background: transparent;
+        border: 0;
+        width: auto;
+        height: auto;
+        padding: 0;
+    }
 }
 
 
