--- a/style/components/stress/stress.scss
+++ b/style/components/stress/stress.scss
@@ -77,3 +77,10 @@
 .fatex__stress__add {
     cursor: pointer;
 }
+
+.fatex__stress__track__description {
+    font-size: 13px;
+    display: inline-block;
+    padding: 0 10px;
+    width: 100%;
+}
