--- a/system/templates/actor/parts/sidebar/stress.html
+++ b/system/templates/actor/parts/sidebar/stress.html
@@ -25,9 +25,9 @@
                         </label>
                     </div>
 
-                    {{#ifnth nth=4}}
+                    {{#ifNth 4}}
                         <div class="fatex__stress__track__break"></div>
-                    {{/ifnth}}
+                    {{/ifNth}}
                 {{/each}}
 
                 {{#each stress.data.fillers}}
