--- a/system/templates/actor/parts/tabloid/aspects.html
+++ b/system/templates/actor/parts/tabloid/aspects.html
@@ -1,6 +1,9 @@
 <div class="fatex__aspects">
     <h2 class="fatex__aspects__headline fatex__headline">
-        {{localize "FATEx.Sheet.Aspects"}}
+        <span>{{localize "FATEx.Sheet.Aspects"}}</span>
+        <div class="fatex__headline__actions">
+            <span class="fatex__headline__add fatex__aspect__add"></span>
+        </div>
     </h2>
 
     <div class="fatex__aspect fatex__input">
