--- a/system/templates/item/stress-sheet.html
+++ b/system/templates/item/stress-sheet.html
@@ -21,7 +21,7 @@
             <div
                     class="fatex__setting__radio{{#ifEquals 0 data.labelType}} fatex__setting__radio--active{{/ifEquals}}"
                     data-value="0"
-                    data-name="labelType"
+                    data-name="data.labelType"
                     data-type="number"
             >
                 <img class="fatex__setting__radio__image" alt="ascending" src="systems/fatex/assets/ui/stress/label_preview_0.png">
@@ -31,7 +31,7 @@
             <div
                     class="fatex__setting__radio{{#ifEquals 1 data.labelType}} fatex__setting__radio--active{{/ifEquals}}"
                     data-value="1"
-                    data-name="labelType"
+                    data-name="data.labelType"
                     data-type="number"
             >
                 <img class="fatex__setting__radio__image" alt="condensed" src="systems/fatex/assets/ui/stress/label_preview_1.png">
@@ -41,7 +41,7 @@
             <div
                     class="fatex__setting__radio{{#ifEquals 2 data.labelType}} fatex__setting__radio--active{{/ifEquals}}"
                     data-value="2"
-                    data-name="labelType"
+                    data-name="data.labelType"
                     data-type="number"
             >
                 <img class="fatex__setting__radio__image" alt="custom" src="systems/fatex/assets/ui/stress/label_preview_2.png">
