--- a/system/templates/actor/parts/header.html
+++ b/system/templates/actor/parts/header.html
@@ -8,9 +8,9 @@
         <label class="fatex__header__label fatex__header__label--center" for="name">{{localize "FATEx.Sheet.FatePoints"}}</label>
 
         <div class="fatex__header__fate-points__wrapper">
-            <input class="fatex__header__fp__input" name="data.information.fp.current" type="text" value="{{data.information.fp.current}}">
+            <input class="fatex__header__fp__input" name="data.fatepoints.current" type="text" value="{{data.fatepoints.current}}">
             <span class="fatex__header__fatepoint_divider"> / </span>
-            <input class="fatex__header__refresh__input" name="data.information.fp.refresh" type="text" value="{{data.information.fp.refresh}}">
+            <input class="fatex__header__refresh__input" name="data.fatepoints.refresh" type="text" value="{{data.fatepoints.refresh}}">
         </div>
     </div>
 
