Implemented aspects restructured item_actions and added base item listener to baseitem

--- a/style/components.scss
+++ b/style/components.scss
@@ -1,4 +1,5 @@
 @import "components/desk/desk.scss";
+@import "components/item/item.scss";
 @import "components/artwork/artwork.scss";
 @import "components/stress/stress.scss";
 @import "components/header/header.scss";
