--- a/style/components/input/input.scss
+++ b/style/components/input/input.scss
@@ -19,11 +19,13 @@
     white-space: nowrap;
 }
 
-.fatex__input input[type="text"].fatex__input__input {
+.fatex__input input[type="text"].fatex__input__input,
+.fatex__input__input{
     padding-left: calc(#{$component-padding} / 2);
     height: auto;
     border: 0;
     border-bottom: 1px solid $primary-color;
+    border-radius: 3px;
 }
 
 .fatex__input__textarea {
