--- a/system/templates/actor/parts/sidebar/stress.html
+++ b/system/templates/actor/parts/sidebar/stress.html
@@ -3,9 +3,9 @@
         <div class="fatex__stress__track fatex__stress__track--index-{{stressIndex}}">
             <h2 class="fatex__headline">
                 <span>{{stress.name}}</span>
-                <div class="fatex__headline__actions">
-                    <span class="fatex__headline__settings fatex__stress__settings" data-item="{{stress._id}}"></span>
-                    <span class="fatex__headline__delete fatex__stress__delete" data-item="{{stress._id}}"></span>
+                <div class="fatex__headline__actions fatex__item__actions">
+                    <span class="fatex__item__settings fatex__stress__settings" data-item="{{stress._id}}"></span>
+                    <span class="fatex__item__delete fatex__stress__delete" data-item="{{stress._id}}"></span>
                 </div>
             </h2>
 
@@ -37,7 +37,7 @@
         </div>
     {{/each}}
 
-    <div class="fatex__stress__track fatex__helper__edit">
+    <div class="fatex__stress__track fatex__helper__editmode">
         <h2 class="fatex__headline fatex__headline--center fatex__stress__add">+</h2>
     </div>
 
