--- a/system/templates/item/aspect-sheet.html
+++ b/system/templates/item/aspect-sheet.html
@@ -2,16 +2,37 @@
 
 <div class="fatex__settings">
     <div class="fatex__setting">
-        <h2 class="fatex__headline">
-            <span>{{localize "FATEx.Item.Aspect.Size"}}</span>
+        <h2 class="fatex__headline fatex__setting__headline">
+            <span>{{localize "FATEx.Item.Aspect.Label"}}</span>
         </h2>
 
-        <div class="fatex__setting__range">
-            <input type="text" class="fatex__setting__range__value" value="{{data.size}}" />
-            <input type="range" class="fatex__setting__range__slider" name="data.size" value="{{data.size}}" min="1" max="28"/>
-        </div>
+        <label class="fatex__input" for="data.label">
+            <input type="text" name="data.label" class="fatex__setting__input fatex__input__input" value="{{data.label}}" />
+        </label>
+    </div>
+
+    <div class="fatex__setting">
+        <h2 class="fatex__headline fatex__setting__headline">
+            <span>{{localize "FATEx.Item.Aspect.Value"}}</span>
+        </h2>
+
+        <label class="fatex__input" for="data.value">
+            <input type="text" name="data.value" class="fatex__setting__input fatex__input__input" value="{{data.value}}" />
+        </label>
+    </div>
+
+    <div class="fatex__setting">
+        <h2 class="fatex__headline fatex__setting__headline">
+            <span>{{localize "FATEx.Item.Aspect.Description"}}</span>
+        </h2>
+
+        <label class="fatex__input" for="data.description">
+            <span class="fatex__setting__help">{{localize "FATEx.Item.Aspect.DescriptionHelp"}}</span>
+            <input type="text" name="data.description" class="fatex__setting__input fatex__input__input" value="{{data.description}}" />
+        </label>
     </div>
 </div>
+
 
 {{> "systems/fatex/templates/item/parts/layout/item-footer.html"}}
 
